--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -1,6 +1,6 @@
 {
   $schema: 'https://docs.renovatebot.com/renovate-schema.json',
-  extends: ['github>marcusrbrown/renovate-config#1.16.11'],
+  extends: ['github>marcusrbrown/renovate-config#v2'],
   customManagers: [
     {
       customType: 'regex',
@@ -10,7 +10,7 @@
     },
   ],
   postUpgradeTasks: {
-    commands: ['npx prettier@3.2.5 --no-color --write .'],
+    commands: ['npx prettier@3.2.4 --no-color --write .'],
     executionMode: 'branch',
   },
 }
