--- a/logger.yaml
+++ b/logger.yaml
@@ -2,3 +2,7 @@
 # Logger - https://www.home-assistant.io/components/logger
 
 default: warn
+
+logs:
+  homeassistant.components.device_tracker: debug
+  homeassistant.components.websocket_api: debug
