--- a/packages/influxdb.yaml
+++ b/packages/influxdb.yaml
@@ -5,54 +5,54 @@
 # https://www.derekseaman.com/2023/04/home-assistant-installing-influxdb-lxc.html
 # https://www.derekseaman.com/2023/04/home-assistant-influxdb-data-management-lxc.html
 
-influxdb:
-  host: !secret influxdb_host
-  port: !secret influxdb_port
-  database: !secret influxdb_database
-  username: !secret influxdb_username
-  password: !secret influxdb_password
-  max_retries: 3
-  api_version: 1
-  ssl: false
-  verify_ssl: false
-  default_measurement: units
-  measurement_attr: unit_of_measurement
-  tags:
-    source: HA
-  tags_attributes:
-    - friendly_name
-    - unit_of_measurement
-  exclude:
-    domains:
-      - automation
-      - camera
-      - device_tracker
-      - fan
-      - lights
-      - media_player
-      - scene
-      - script
-      - update
-  ignore_attributes:
-    - assumed_state
-    - attribution
-    - device_class
-    - device_file
-    - editable
-    - effect_list
-    - event
-    - icon
-    - ip_address
-    - marker_type
-    - mode
-    - options
-    - preset_modes
-    - source
-    - state_open
-    - state_closed
-    - stateExtra
-    - state_class
-    - step
-    - supported_color_modes
-    - supported_features
-    - writable
+# influxdb:
+#   host: !secret influxdb_host
+#   port: !secret influxdb_port
+#   database: !secret influxdb_database
+#   username: !secret influxdb_username
+#   password: !secret influxdb_password
+#   max_retries: 3
+#   api_version: 1
+#   ssl: false
+#   verify_ssl: false
+#   default_measurement: units
+#   measurement_attr: unit_of_measurement
+#   tags:
+#     source: HA
+#   tags_attributes:
+#     - friendly_name
+#     - unit_of_measurement
+#   exclude:
+#     domains:
+#       - automation
+#       - camera
+#       - device_tracker
+#       - fan
+#       - lights
+#       - media_player
+#       - scene
+#       - script
+#       - update
+#   ignore_attributes:
+#     - assumed_state
+#     - attribution
+#     - device_class
+#     - device_file
+#     - editable
+#     - effect_list
+#     - event
+#     - icon
+#     - ip_address
+#     - marker_type
+#     - mode
+#     - options
+#     - preset_modes
+#     - source
+#     - state_open
+#     - state_closed
+#     - stateExtra
+#     - state_class
+#     - step
+#     - supported_color_modes
+#     - supported_features
+#     - writable
