--- a/logger.yaml
+++ b/logger.yaml
@@ -7,7 +7,7 @@ filters:
   homeassistant.util.loop:
     # WARNING (MainThread) [homeassistant.util.loop] Detected blocking call to open inside the event loop by integration 'lacrosse_view'
     - 'Detected blocking call to open inside the event loop by integration'
-  roombapy.remotes_client:
+  roombapy.remote_client:
     # WARNING (Thread-4 (_thread_main)) [roombapy.remote_client] Unknown disconnection error: ID=16.Kindly use https://github.com/pschmitt/roombapy/issues/new
     - 'Unknown disconnection error'
   roombapy.roomba:
