--- a/include/secrets.yaml
+++ b/include/secrets.yaml
@@ -24,3 +24,5 @@ influxdb_username: X
 
 lg_uf6490_mac: AA-BB-CC-DD-EE-FF
 lg_uh6550_mac: AA-BB-CC-DD-EE-FF
+
+pi_hole_status_cmd: 'curl -s http://pi.hole/admin/api.php?status&auth=WEBPASSWORD'
