--- a/include/secrets.yaml
+++ b/include/secrets.yaml
@@ -25,4 +25,6 @@ influxdb_username: X
 lg_uf6490_mac: AA-BB-CC-DD-EE-FF
 lg_uh6550_mac: AA-BB-CC-DD-EE-FF
 
+mobile_app_device: guid-of-mobile-app-device
+
 pi_hole_status_cmd: 'curl -s http://pi.hole/admin/api.php?status&auth=WEBPASSWORD'
