--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -18,6 +18,15 @@
       matchUpdateTypes: ['minor', 'patch'],
       automerge: true,
     },
+    {
+      matchPackageNames: ['esphome'],
+      extractVersion: '^(?<version>\\d+\\.\\d+\\.\\d+)$',
+      versioning: 'regex:^(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)$',
+      commitMessageExtra: 'to {{#if isPinDigest}}{{{newDigestShort}}}{{else}}{{#if newValue}}{{{newValue}}}{{else}}{{{newDigestShort}}}{{/if}}{{/if}}',
+      pinDigests: false,
+      separateMajorMinor: false,
+      separateMinorPatch: false,
+    },
   ],
 
   postUpgradeTasks: {
