feat(esphome.life): configure as a submodule
<https://github.com/marcusrbrown/esphome.life>

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -3,6 +3,10 @@
 
   extends: ['github>marcusrbrown/renovate-config#v2'],
 
+  'git-submodules': {
+    enabled: true,
+  },
+
   packageRules: [
     {
       matchManagers: ['pip_requirements'],
