--- a/packages/homeassistant.yaml
+++ b/packages/homeassistant.yaml
@@ -30,11 +30,13 @@ group:
   add_on_cpu_sensors:
     entities:
       - sensor.advanced_ssh_web_terminal_cpu_percent
+      - sensor.esphome_cpu_percent
       - sensor.z_wave_js_cpu_percent
 
   add_on_memory_sensors:
     entities:
       - sensor.advanced_ssh_web_terminal_memory_percent
+      - sensor.esphome_memory_percent
       - sensor.z_wave_js_memory_percent
 
   ignored_unavailable_entities:
