--- a/automations/homeassistant.yaml
+++ b/automations/homeassistant.yaml
@@ -17,8 +17,29 @@
         level: critical
         message: 'Home Assistant started'
 
+    - service: persistent_notification.create
+      data:
+        title: 'Home Assistant Startup'
+        message: 'Waiting for startup to complete...'
+        notification_id: 'hass_startup'
+
+    - wait_template: >
+        {{ is_state('input_boolean.startup_pending', 'off')
+            or (is_state('binary_sensor.wan', 'on')
+            and is_state('binary_sensor.zwave_network', 'on')
+            and is_state('binary_sensor.offline_zwave_devices', 'on'))
+        }}
+      timeout:
+        minutes: 5
+
     - service: input_boolean.turn_off
       entity_id: input_boolean.startup_pending
+
+    - service: persistent_notification.create
+      data:
+        title: 'Home Assistant Startup'
+        message: 'Started at {{ now().strftime("%-I:%M %p") }}.'
+        notification_id: 'hass_startup'
 
     - service: system_log.write
       data:
