--- a/recorder.yaml
+++ b/recorder.yaml
@@ -27,23 +27,32 @@ include:
     - timer
     - utility_meter
     - vacuum
+  entities:
+    - sensor.power_production_now
   entity_globs:
     - sensor.*_ac_energy*
     - sensor.*_cpu_percent
+    - sensor.*_current_temperature
     - sensor.*_daily
     - sensor.*_data_download*
     - sensor.*_data_upload*
     - sensor.*_device_temperature
     - sensor.*_electric_consumption*
+    - sensor.*_heart_rate*
+    - sensor.*_impedance*
     - sensor.*_lock_status
     - sensor.*_memory_percent
     - sensor.*_monthly
     - sensor.*_stats
+    - sensor.*_steps*
     - sensor.*_weekly
+    - sensor.*_weight*
+    - sensor.*amazfit_*
     - sensor.*current_power_use*
     - sensor.*energy_consumption*
-    - sensor.current_power_use*
     - sensor.rbr50*
+    - sensor.solaredge_*
     - sensor.speedtest_*
+    - sensor.withings_*
 
 purge_keep_days: 31
