ci(renovate): update to current conventions

--- a/.github/workflows/renovate.yaml
+++ b/.github/workflows/renovate.yaml
@@ -16,9 +16,17 @@ name: Renovate
         required: false
         type: boolean
         default: false
+  workflow_run:
+    branches: [main]
+    types: [completed]
+    workflows: ['CI']
+
+permissions:
+  contents: read
 
 jobs:
   renovate:
+    if: ${{ github.event_name != 'workflow_run' || github.event.workflow_run.conclusion == 'success' }}
     name: Renovate
     secrets: inherit
     uses: marcusrbrown/.github/.github/workflows/renovate.yaml@main
