--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -3,6 +3,8 @@
 
   extends: ['github>marcusrbrown/renovate-config#3.1.1'],
 
+  automergeType: 'pr',
+
   'git-submodules': {
     enabled: true,
   },
