--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,8 +3,9 @@ name: CI
 
 'on':
   pull_request:
+    branches: [main]
   push:
-    branches: [main, 'renovate/**']
+    branches: [main]
   workflow_dispatch:
 
 concurrency:
