ci(renovate): add matcher for pre-commit in mise.toml

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -22,6 +22,15 @@
       datasourceTemplate: 'pypi',
       depTypeTemplate: 'dev-dependencies',
     },
+    {
+      customType: 'regex',
+      fileMatch: ['^mise\\.toml$'],
+      matchStrings: [
+        '["\']aqua:(?<depName>pre-commit/pre-commit)["\']\\s+=\\s+["\'](?<currentValue>(\\d+\\.){2}\\d+)["\']',
+      ],
+      datasourceTemplate: 'pypi',
+      depTypeTemplate: 'dev-dependencies',
+    },
   ],
 
   'git-submodules': {
