ci(renovate): modernize config and bump reusable workflow

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -68,8 +68,12 @@
     executionMode: 'branch',
   },
 
+  prCreation: 'immediate',
+
   'pre-commit': {
     addLabels: ['pre-commit'],
     enabled: true,
   },
+
+  rebaseWhen: 'behind-base-branch',
 }
